test/corpus/markup.txt
==================
Simple Visualforce page
==================

<apex:page></apex:page>

---

(document
  (element
    (start_tag
      (tag_name))
    (end_tag
      (tag_name))))

==================
Nested HTML and Visualforce tags
==================

<apex:page controller="AccountController">
  <main class="content">
    <apex:form><div>Account</div></apex:form>
  </main>
</apex:page>

---

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_text))))
    (element
      (start_tag
        (tag_name)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_text))))
      (element
        (start_tag
          (tag_name))
        (element
          (start_tag
            (tag_name))
          (text)
          (end_tag
            (tag_name)))
        (end_tag
          (tag_name)))
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))

==================
Self-closing custom and managed components
==================

<apex:page><c:accountCard/><pkg:managedWidget value=active /></apex:page>

---

(document
  (element
    (start_tag
      (tag_name))
    (element
      (self_closing_tag
        (tag_name)))
    (element
      (self_closing_tag
        (tag_name)
        (attribute
          (attribute_name)
          (attribute_value
            (attribute_text)))))
    (end_tag
      (tag_name))))

==================
Visualforce component root
==================

<apex:component access="global"><apex:attribute name='recordId'/></apex:component>

---

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_text))))
    (element
      (self_closing_tag
        (tag_name)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_text)))))
    (end_tag
      (tag_name))))

==================
Comments entities and doctype
==================

<!DOCTYPE html>
<!-- Visualforce page -->
<apex:page><p>Tom &amp; Jerry</p></apex:page>

---

(document
  (doctype)
  (comment)
  (element
    (start_tag
      (tag_name))
    (element
      (start_tag
        (tag_name))
      (text)
      (entity)
      (text)
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))

==================
XML declaration
==================

<?xml version="1.0" encoding='UTF-8'?>
<apex:page />

---

(document
  (xml_declaration
    (attribute
      (attribute_name)
      (quoted_attribute_value
        (attribute_text)))
    (attribute
      (attribute_name)
      (quoted_attribute_value
        (attribute_text))))
  (element
    (self_closing_tag
      (tag_name))))
