test/corpus/recovery.txt
==================
Incomplete expression at end of file
==================

<apex:page>{!account.Name

---

(document
  (element
    (start_tag
      (tag_name))
    (visualforce_expression
      (expression_start)
      (member_expression
        object: (identifier)
        property: (identifier)))))

==================
Incomplete call recovers to later markup
==================

<apex:page>{!IF(active, 'yes'}<footer>After</footer></apex:page>

---

(document
  (element
    (start_tag
      (tag_name))
    (visualforce_expression
      (expression_start)
      (call_expression
        function: (identifier)
        arguments: (argument_list
          (identifier)
          (string_literal)
          (MISSING ")")))
      (expression_end))
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))

==================
Partially typed tag remains local
==================

<apex:page><apex:outputText value="{!name}"/><div

---

(document
  (element
    (start_tag
      (tag_name))
    (element
      (self_closing_tag
        (tag_name)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (visualforce_expression
              (expression_start)
              (identifier)
              (expression_end))))))
    (element
      (start_tag
        (tag_name)))))

==================
Comparison operators preserve surrounding markup
==================

<apex:page rendered="{!amount < 10 OR amount >= 20}">{!value <> null}<span>After</span></apex:page>

---

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (visualforce_expression
            (expression_start)
            (binary_expression
              left: (binary_expression
                left: (identifier)
                operator: (operator)
                right: (number_literal))
              operator: (operator)
              right: (binary_expression
                left: (identifier)
                operator: (operator)
                right: (number_literal)))
            (expression_end)))))
    (visualforce_expression
      (expression_start)
      (binary_expression
        left: (identifier)
        operator: (operator)
        right: (null_literal))
      (expression_end))
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))

==================
Mismatched tag recovers to a later sibling
==================

<apex:page><section><span>Broken</section><footer>After</footer></apex:page>

---

(document
  (element
    (start_tag
      (tag_name))
    (element
      (start_tag
        (tag_name))
      (element
        (start_tag
          (tag_name))
        (text))
      (end_tag
        (tag_name)))
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))

==================
Incomplete subscript remains structured
==================

<apex:page>{!map[

---

(document
  (element
    (start_tag
      (tag_name))
    (visualforce_expression
      (expression_start)
      (subscript_expression
        object: (identifier)))))
